Materials for built-in and URP are created correctly. HDRP is in progress.

--- a/Data/config.json
+++ b/Data/config.json
@@ -3,11 +3,11 @@
     "defaultDestinationPath": "Assets/Quixel",
     "useNameForDestinationFolder": true,
     "logContext": false,
+    "doubleSidedMaterial": true,
     "textureKeys": [
         "AO",
         "BaseColor",
         "Bump",
-        "Cavity",
         "Diffuse",
         "Metalness",
         "Normal",
