Prefabs are now saved with attached materials. (Error when importing LODs)

--- a/Data/config.json
+++ b/Data/config.json
@@ -2,8 +2,9 @@
     "pathToUQImporter": "Assets/UQImporter",
     "defaultDestinationPath": "Assets/Quixel",
     "useNameForDestinationFolder": true,
-    "logContext": false,
     "doubleSidedMaterial": true,
+    "logContext": false,
+    "cleanDirectory": true,
     "textureKeys": [
         "AO",
         "BaseColor",
