Asset name field updates appropriately when selecting a new valid asset

--- a/Data/config.json
+++ b/Data/config.json
@@ -15,5 +15,5 @@
     ],
     "logContext": false,
     "cleanDirectory": true,
-    "useParallelProcessing": true
+    "enableMultithreading": false
 }
