Increased max texture size to 8k. Removed use folder name from window (option still in config). Added cache clear utility.

--- a/Data/config.json
+++ b/Data/config.json
@@ -13,7 +13,10 @@
         "Roughness",
         "Specular"
     ],
+    "logCompletionTime": true,
+    "pingImportedAsset": true,
     "logContext": false,
     "cleanDirectory": true,
-    "enableMultithreading": false
+    "deleteZipFile": false,
+    "enableMultithreading": true
 }
